--- a/hostdata/hiera.yaml
+++ b/hostdata/hiera.yaml
@@ -10,9 +10,9 @@
 # stackdeploy custom
   - shared
   - controller
-  - controller_networking
   - compute
-  - compute_networking
-  - nics/%{hostname}
+  - networking
+  - host_overrides
 :yaml:
+  # where deploysite is the name of your site directory in hostdata
   :datadir: /etc/puppet/modules/stackdeploy/hostdata/%{deploysite}
